# linyetools

.github/instructions/: excel-to-md.instructions.md
ExcelConverter/: README.md  excel_converter.py  excel_reader.py  exporters.py  pyproject.toml
ExcelToMd/: README.md  excel_to_md.py  pyproject.toml  requirements.txt
